library AI provider error handling